--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
     <h5>Mi primer titulo</h5>
     <h6>Mi primer titulo</h6>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam aliquid fugiat autem asperiores ab, illo beatae saepe rem facilis ducimus fuga ullam eaque sed aliquam ad dolorum! Quidem, impedit non.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam aliquid
+      fugiat autem asperiores ab, illo beatae saepe rem facilis ducimus fuga
+      ullam eaque sed aliquam ad dolorum! Quidem, impedit non.
     </p>
-    <img 
-        src="https://cdn.marvel.com/content/1x/9780744081640.jpg"
-        alt="UCL"
-        width="200"
-        height="300"
-    >
-</body>
+    <img
+      src="https://cdn.marvel.com/content/1x/9780744081640.jpg"
+      alt="UCL"
+      width="200"
+      height="300"
+    />
+
+    <p><img src="./img.jpg" alt="UCL" width="200" height="300" /></p>
+  </body>
 </html>
